--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "groucho75/miphskit",
+    "name": "groucho75/phmisk",
     "description": "Php Html5 Micro Starter Kit",
     "type": "library",
     "keywords": ["php", "microframework"],
